--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ OLDStyle.php
 .documenti da salvare/Processo di creazione login informatici.docx
 .documenti da salvare/Processo di creazione login informatici.docx.pdf
 components/connection.php
+components/connection.php
+components/connection.php
+.gitignore
